...

        <LinearLayout
            android:id="@+id/jobDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/locationInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/costOfLivingIndexInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/yearlySalaryInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/yearlyBonusInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/gymMembershipAnnualInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/leaveTimeDaysInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/match401kPercentageInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/petInsuranceAnnualInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="0.3dp"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="0.25dp"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/compareButton"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
...

                <Button
                    android:id="@+id/enterAnother"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
...

                <Button
                    android:id="@+id/returnToMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
...
