<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/mainMenuScreenTitle"
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:gravity="center"
            android:paddingBottom="100dp"
            android:text="Main Menu"
            android:textAlignment="center"
            android:textSize="24sp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:barrierDirection="left" />

        <Button
            android:id="@+id/jobDetailsMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@android:color/holo_purple"
            android:baselineAligned="false"
            android:text="@string/enter_current_job_details" />

        <Button
            android:id="@+id/enterJobOfferMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@android:color/holo_purple"
            android:baselineAligned="false"
            android:text="@string/enter_job_offer" />

        <Button
            android:id="@+id/comparisonSettingsMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@android:color/holo_purple"
            android:baselineAligned="false"
            android:text="@string/adjust_comparison_settings" />

        <Button
            android:id="@+id/jobComparisonMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@android:color/holo_purple"
            android:text="@string/compare_jobs" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
