...
            <Space
                android:layout_width="10dp"
                android:layout_height="12dp"
                android:layout_weight="0.05" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.05"
                android:background="@android:color/holo_red_light"
                android:text="@string/button_cancel" />
...
